fix(window): fix content bleeding outside of window boundaries

--- a/packages/bootstrap/scss/window/_theme.scss
+++ b/packages/bootstrap/scss/window/_theme.scss
@@ -15,5 +15,9 @@
         height: 1em;
         border-width: 0;
     }
+    .k-window-content {
+        border-color: inherit;
+        background: none;
+    }
 
 }
